--- a/destriya nur fauziah 💗💗🥶🤘/index.html
+++ b/destriya nur fauziah 💗💗🥶🤘/index.html
@@ -19,8 +19,14 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `Dear destriya nur fauziah,
+      kamu tetep semangat ya apapun yang terjadi,aku bakal ada selalu buat dengerin semua cerita kamu
+don't ever think u alone, kamu masih punya temen dekat kamu masih ada aku juga, everything will gonna be okay honey.
+jangan hadapi semua nya sendirian, ceritain semua ke aku, aku ngga janji bakal selalu ada tapi aku bakal usaha supaya kamu yakin ak selalu ada
+i love you bro, don't ask the reason cuz i love you without there is a certain reason,i just love u
+don't forget ur happiness,cuz semua kebahagiaan kamu berasal dari kamu sendiri ♡
+`;
+      musik = `music.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
